@@ -1,3 +1,8 @@
+2008-01-17  Dan Winship  <danw@gnome.org>
+
+	* gui/itip-utils.c (itip_publish_comp): Port to libsoup 2.4. Plug
+	a leak.
+
 2008-01-17  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #509879
